fix(auth): models works correctly
